Add ErrorModal reusable component and use it in AddUser component

--- a/src/components/UsersList.css
+++ b/src/components/UsersList.css
@@ -1,7 +1,7 @@
 .users {
     margin: 2rem auto;
     width: 90%;
-    max-width: 40rem;
+    max-width: 56rem;
     background: white;
 }
 
@@ -14,4 +14,5 @@
     border: 1px solid #ccc;
     margin: 0.5rem 0;
     padding: 0.5rem;
+    width: 54rem;
 }
